Bugfix for overflow being visible on phones

--- a/index.css
+++ b/index.css
@@ -193,6 +193,10 @@ p {
 .row {
   display: flex;
   height: 100%;
+  overflow: hidden;
+}
+.waves-container {
+  overflow: hidden;
 }
 
 .tutorello {
